fixed overlay being too big

--- a/projects.css
+++ b/projects.css
@@ -159,7 +159,7 @@ body{
   left: 0;
   right: 0;
   height: 100%;
-  width: 100%;
+  width: 94.5%;
   opacity: 0;
   transition: 0s ease;
   background-color: #202020;
